--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Acme&family=Annapurna+SIL:wght@400;700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-color: black;
   color: white;
+  font-family: "Acme", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav {
+  background-color: #171616;
+  top: 0;
+  z-index: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post-container,
+.user-details {
+  cursor: pointer;
+}
+
+.post-container,
+.user-container:hover {
+  background-color: #171616;
+}
+
+.post-container,
+.user-container,
+.comments-container,
+.user-info {
+  box-shadow: 0px 0px 8px 0 #747474;
+  border-radius: 4px;
+}
+
+.user-image {
+  width: 50%;
+  height: 90%;
+}
+
+.user-info {
+  background-color: #171616;
+  top: 98px;
+}
+.error-icon {
+  width: 40px;
+  height: 40px;
 }
