--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&family=Annapurna+SIL:wght@400;700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 body {
-  background-color: black;
-  color: white;
   font-family: "Acme", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 20px;
 }
 
-.nav {
-  background-color: #171616;
+.header {
+  background-color: #d8d8d8;
   top: 0;
   z-index: 1;
 }
@@ -22,13 +20,14 @@ body {
 
 .post-container,
 .user-container:hover {
-  background-color: #171616;
+  background-color: #c0bfbf;
 }
 
 .post-container,
 .user-container,
 .comments-container,
 .user-info {
+  background-color: #d8d8d8;
   box-shadow: 0px 0px 8px 0 #747474;
   border-radius: 4px;
 }
@@ -39,9 +38,9 @@ body {
 }
 
 .user-info {
-  background-color: #171616;
   top: 98px;
 }
+
 .error-icon {
   width: 40px;
   height: 40px;
