--- a/src/App.css
+++ b/src/App.css
@@ -19,14 +19,15 @@ body {
 }
 
 .post-container,
-.user-container:hover {
+.user-container,.product-container:hover {
   background-color: #c0bfbf;
 }
 
 .post-container,
 .user-container,
 .comments-container,
-.user-info {
+.user-info,
+.product-container {
   background-color: #d8d8d8;
   box-shadow: 0px 0px 8px 0 #747474;
   border-radius: 4px;
@@ -44,4 +45,21 @@ body {
 .error-icon {
   width: 40px;
   height: 40px;
+}
+.add-post {
+  top: 46px;
+}
+.go-top {
+  color: #f8f9fa !important;
+}
+
+.go-top:hover {
+  color: #0d6efd !important;
+}
+.card-image {
+  width: 100%;
+  height: 50%;
+}
+.dropdown-item {
+  cursor: pointer;
 }
